--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <img class="dino" src="http://wallpapercave.com/wp/kiQqrEj.jpg" alt="dino">
       <div class="caption">
         <h3>Guess the Dino!!</h3>
-        <p id="WORD">_ _ _ _ _</p>
-        <p>Letters Guessed<span> x</span></p>
-        <p>Guesses Remaining <span> 8 </span></p>
-        <p>Wins<span> 0</span></p>
+        <p id="WORD">Press Start</p>
+        <p>Letters Guessed<span id="guessed"> x</span></p>
+        <p>Guesses Remaining <span id="remain"> 8 </span></p>
+        <p>Wins<span id="wins"> 0</span></p>
       </div>
     </div>
   </div>
@@ -47,8 +47,8 @@
 
 <div class="col-md-12">
 <div id="buttons">
-<button onclick="Game()" type="button" id="Start"">Start Game</button> 
-<button onclick="newGame()" type="button" id="New">New Game</button>
+<button type="button" id="Start"">Start Game</button> 
+<button type="button" id="New">New Game</button>
 
 
 
