--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="col-md-12">
       <div class="jumbotron">
         <h1>The Big Hang</h1>
-        <div>Use the mouse and guess the name of your favorite dinosaurs before you go extinct!</div>
+        <div>Use the keyboard and guess the name of your favorite dinosaurs before you go extinct!</div>
         </div>
     </div>
   </div>
