--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="caption">
         <h3>Guess the Dino!!</h3>
         <p id="WORD">Press Start</p>
-        <p>Letters Guessed<span id="guessed"> x</span></p>
-        <p>Guesses Remaining <span id="remain"> 8 </span></p>
-        <p>Wins<span id="wins"> 0</span></p>
+        <p>Letters Guessed<span id="wrongArray"> x </span></p>
+        <p>Guesses Remaining <span id="guessCount"> 9 </span></p>
+        <p>Wins <span id="winCounter"> 0</span></p>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
 
 <div class="col-md-12">
 <div id="buttons">
-<button type="button" id="Start"">Start Game</button> 
+<button type="button" id="Start">Start Game</button> 
 <button type="button" id="New">New Game</button>
 </div>
 </div>
