--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="caption">
         <h3>Guess the Dino!!</h3>
         <p id="WORD">Press Start</p>
-        <p>Letters Guessed<span id="wrongArray"> x </span></p>
-        <p>Guesses Remaining <span id="guessCount"> 9 </span></p>
+        <p>Letters Guessed<span id="wrongArray"> None </span></p>
+        <p>Guesses Remaining <span id="guessCount"> 8 </span></p>
         <p>Wins <span id="winCounter"> 0</span></p>
       </div>
     </div>
@@ -48,7 +48,7 @@
 <div class="col-md-12">
 <div id="buttons">
 <button type="button" id="Start">Start Game</button> 
-<button type="button" id="New">New Game</button>
+<button type="button" id="New"> New Game</button>
 </div>
 </div>
 </div>
