--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Amatic+SC">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Eagle+Lake">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +39,7 @@
         <p id="WORD">Press Start</p>
         <p>Letters Guessed<span id="wrongArray"> None </span></p>
         <p>Guesses Remaining <span id="guessCount"> 8 </span></p>
-        <p>Wins <span id="winCounter"> 0</span></p>
+   <!--     <p>Wins <span id="winCounter"> 0</span></p> -->
       </div>
     </div>
   </div>
